--- a/LBW/Views/GM/Recepcion.cshtml
+++ b/LBW/Views/GM/Recepcion.cshtml
@@ -54,23 +54,23 @@
 
 }
 
-@* @section PageActions {
-    <div id="popupContainer" style="width: 300px;">
-        <div id="formContainer" style="width: 300px; margin: 20px auto;">
-            <form id="dateForm">
+@section pageactions {
+    <div id="popupcontainer" style="width: 300px;">
+        <div id="formcontainer" style="width: 300px; margin: 20px auto;">
+            <form id="dateform">
                 <div>
-                    <label for="startDate">Fecha de inicio:</label>
-                    <div id="startDateBox"></div>
+                    <label for="startdate">fecha de inicio:</label>
+                    <div id="startdatebox"></div>
                 </div>
                 <div>
-                    <label for="endDate">Fecha de fin:</label>
-                    <div id="endDateBox"></div>
+                    <label for="enddate">fecha de fin:</label>
+                    <div id="enddatebox"></div>
                 </div>
             </form>          
         </div>
             <div style="height: 100px;"></div>
         <div style="text-align: center; margin-top: 10px;">
-            <button id="selectButton"></button>
+            <button id="selectbutton"></button>
         </div>
     </div>
 }
