--- a/LBW/Views/GR/Analisis.cshtml
+++ b/LBW/Views/GR/Analisis.cshtml
@@ -57,66 +57,182 @@
 }
 
 @section PageActions {
-
+    <div id="popupcontainer" style="width: 300px;">
+        <div id="formcontainer" style="width: 300px; margin: 20px auto;">
+            <form id="dateform">
+                <div>
+                    <label for="startdate">fecha de inicio:</label>
+                    <div id="startdatebox"></div>
+                </div>
+                <div>
+                    <label for="enddate">fecha de fin:</label>
+                    <div id="enddatebox"></div>
+                </div>
+            </form>
+        </div>
+        <div style="height: 100px;"></div>
+        <div style="text-align: center; margin-top: 10px;">
+            <button id="selectbutton"></button>
+        </div>
+    </div>
 
 }
-@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Resultado>()
+
+@* @(Html.DevExtreme().DataGrid<LBW.Models.Entity.Proyecto>()
     .DataSource(ds => ds.Mvc()
-        .Controller("Resultadoes")
+        .Controller("Proyectoes")
         .LoadAction("Get")
-        .Key("IdResult")
+        .Key("IdProyecto")
     )
     .RemoteOperations(true)
     .Columns(columns => {
 
-        columns.AddFor(m => m.IdResult);
+        columns.AddFor(m => m.IdProyecto);
 
-        columns.AddFor(m => m.IdSample).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("MuestrasLookup").Key("Value"))
+        columns.AddFor(m => m.ID_TL).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("PlantillasLookup").Key("Value"))
             .ValueExpr("Value")
             .DisplayExpr("Text")
         );
 
-        columns.AddFor(m => m.IdUnidad).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("UnidadesLookup").Key("Value"))
+        columns.AddFor(m => m.ID_Cliente).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("ClientesLookup").Key("Value"))
             .ValueExpr("Value")
             .DisplayExpr("Text")
         );
 
-        columns.AddFor(m => m.IdComponent);
+        columns.AddFor(m => m.Name);
 
-        columns.AddFor(m => m.IdAnalysis).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("AnalisissLookup").Key("Value"))
+        columns.AddFor(m => m.TemplateVersion);
+
+        columns.AddFor(m => m.Description);
+
+        columns.AddFor(m => m.Note);
+
+        columns.AddFor(m => m.Status).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("ListasLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.DateCreated);
+
+        columns.AddFor(m => m.DateRecieved);
+
+        columns.AddFor(m => m.DateStarted);
+
+        columns.AddFor(m => m.DateCompleted);
+
+        columns.AddFor(m => m.DateReviewed);
+
+        columns.AddFor(m => m.DateUpdated);
+
+        columns.AddFor(m => m.Owner).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("UsuariosLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.NumSamples);
+    })
+)
+ *@
+@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Muestra>()
+    .DataSource(ds => ds.Mvc()
+        .Controller("Muestras")
+        .LoadAction("Get")
+        .Key("IdSample")
+    )
+    .RemoteOperations(true)
+    .Columns(columns => {
+
+        columns.AddFor(m => m.IdSample);
+
+        columns.AddFor(m => m.IdPm).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("PuntoMuestrasLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.IdCliente).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("ClientesLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.IdLocation).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("UbicacionesLookup").Key("Value"))
             .ValueExpr("Value")
             .DisplayExpr("Text")
         );
 
         columns.AddFor(m => m.SampleNumber);
 
-        columns.AddFor(m => m.ResultNumber);
+        columns.AddFor(m => m.TextID);
 
-        columns.AddFor(m => m.OrderNum);
-
-        columns.AddFor(m => m.AnalysisData);
-
-        columns.AddFor(m => m.NameComponent);
-
-        columns.AddFor(m => m.ReportedName);
-
-        columns.AddFor(m => m.Status).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("ListasLookup").Key("Value"))
-            .ValueExpr("Value")
-            .DisplayExpr("Text")
-        );
-
-        columns.AddFor(m => m.Reportable);
 
         columns.AddFor(m => m.ChangedOn);
 
-        columns.AddFor(m => m.Instrument).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("InstrumentosLookup").Key("Value"))
+        columns.AddFor(m => m.OriginalSample);
+
+        columns.AddFor(m => m.LoginDate);
+
+        columns.AddFor(m => m.LoginBy).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("UsuariosLookup").Key("Value"))
             .ValueExpr("Value")
             .DisplayExpr("Text")
         );
+
+        columns.AddFor(m => m.SampleDate);
+
+        columns.AddFor(m => m.RecdDate);
+
+        columns.AddFor(m => m.ReceivedBy).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("UsuariosLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.DateStarted);
+
+        columns.AddFor(m => m.DueDate);
+
+        columns.AddFor(m => m.DateCompleted);
+
+        columns.AddFor(m => m.DateReviewed);
+
+        columns.AddFor(m => m.PreBy);
+
+        columns.AddFor(m => m.Reviewer);
+
+        columns.AddFor(m => m.SamplingPoint);
+
+
+        columns.AddFor(m => m.IdProject).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("ProyectosLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.SampleName);
+
+        columns.AddFor(m => m.Location);
+
+        columns.AddFor(m => m.Customer);
+
+        columns.AddFor(m => m.Observaciones);
+
+        columns.AddFor(m => m.IdPlanta).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("PlantasLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
+
+        columns.AddFor(m => m.ConteoPuntos);
     })
 )
+
+<script>
+
+
+</script>
