--- a/LBW/Views/GM/Recepcion.cshtml
+++ b/LBW/Views/GM/Recepcion.cshtml
@@ -219,30 +219,38 @@
         <div class="height: 10px;"> 
 
         </div>
-        @(Html.DevExtreme().DataGrid<LBW.Models.Entity.Muestra>()
-            .ID("gridContainer2")
-            .DataSource(ds => ds.Mvc()
-            .Controller("Muestras")
-            .LoadAction("GetDate")
-            .Key("IdSample")
-        )
-        .ShowBorders(true)
-        .RemoteOperations(true)
-        .RemoteOperations(true)
-        .Columns(columns => {
+        @(
+        Html.DevExtreme().DataGrid<LBW.Models.Entity.Muestra>()
+                .ID("gridContainer2")
+                .DataSource(ds => ds.Mvc()
+                .Controller("Muestras")
+                .LoadAction("GetDate")
+                .Key("IdSample")
+            )
+            .ShowBorders(true)
+            .Columns(columns => {
 
-
+        columns.Add()
+                    .Caption("")
+                    .CellTemplate(@<text>
+                  <div id="unreceived">
+                    <p>U</p>
+                  </div>
+                  <div id="incomplete">
+                      <p>I</p>
+                  </div>
+            </text>).Width(50);
         columns.AddFor(m => m.TextID).Caption("Muestra");
+
         }
         )
             .ShowBorders(true)
             .AllowColumnReordering(true)
             .RowAlternationEnabled(false)
             .ShowColumnLines(true)
-            .Grouping(g => g.AutoExpandAll(true))
-            .ShowRowLines(true)
             .Paging(paging => paging.PageSize(20))
             .FilterRow(f => f.Visible(true))
+            .ShowRowLines(true)
             .Pager(pager =>
             {
                 pager.ShowPageSizeSelector(true);
@@ -328,14 +336,11 @@
         });
     }
 
-    var solicitudEnProgreso = false;
+  
 
     function onStatusValueChanged(e) {
    
-            console.log("Valor seleccionado:", e.value);
-
             var status = e.value;
-            console.log("Valor seleccionado:", status);
 
             $.ajax({
                 url: '@Url.Action("GetDate", "Muestras")',
@@ -347,8 +352,31 @@
                 success: function (result) {
                     DevExpress.ui.notify('Datos enviados correctamente', 'success', 6000);
                     console.log(status);
-                    // Recargar los datos del DataGrid
-                    $("#gridContainer2").dxDataGrid("instance").option("dataSource", result);
+
+                // Ocultar ambos divs por defecto
+                $("#unreceived").hide();
+                $("#incomplete").hide();
+
+                // Recargar los datos del DataGrid
+                    var dataGrid = $("#gridContainer2").dxDataGrid("instance");
+                    dataGrid.option("dataSource", result);
+                    dataGrid.repaint();
+
+
+                // Mostrar u ocultar divs según el valor del Status
+                switch (status) {
+                    case 254:
+
+                        $("#unreceived").show();
+                        $("#incomplete").hide();
+                        break;
+                    case 25:
+
+                        $("#unreceived").hide();
+                        $("#incomplete").show();
+                        break;
+                }
+ 
                 },
                 error: function (error) {
                     DevExpress.ui.notify('Error al enviar los datos', 'error', 6000);
