--- a/LBW/Views/GR/Autorizar.cshtml
+++ b/LBW/Views/GR/Autorizar.cshtml
@@ -61,3 +61,36 @@
 }
 
 
+@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Usuario>()
+    .DataSource(ds => ds.Mvc()
+        .Controller("Usuarios")
+        .LoadAction("Get")
+        .InsertAction("Post")
+        .UpdateAction("Put")
+        .Key("IdUser")
+    )
+    .RemoteOperations(true)
+    .Columns(columns => {
+
+        columns.AddFor(m => m.IdUser);
+        columns.AddFor(m => m.UsuarioID);
+
+        columns.AddFor(m => m.NombreCompleto);
+
+        columns.AddFor(m => m.Correo);
+
+        columns.AddFor(m => m.Rol);
+
+        columns.AddFor(m => m.GMT_OFFSET);
+
+        columns.AddFor(m => m.UsuarioDeshabilitado);
+
+        columns.AddFor(m => m.FechaDeshabilitado);
+
+ 
+    })
+    .Editing(e => e
+        .AllowAdding(true)
+        .AllowUpdating(true)
+    )
+)
