--- a/LBW/Views/GR/Analisis.cshtml
+++ b/LBW/Views/GR/Analisis.cshtml
@@ -57,162 +57,123 @@
 }
 
 @section PageActions {
-    <div id="popupcontainer" style="width: 300px;">
-        <div id="formcontainer" style="width: 300px; margin: 20px auto;">
-            <form id="dateform">
-                <div>
-                    <label for="startdate">fecha de inicio:</label>
-                    <div id="startdatebox"></div>
-                </div>
-                <div>
-                    <label for="enddate">fecha de fin:</label>
-                    <div id="enddatebox"></div>
-                </div>
-            </form>
-        </div>
-        <div style="height: 100px;"></div>
-        <div style="text-align: center; margin-top: 10px;">
-            <button id="selectbutton"></button>
-        </div>
-    </div>
+    
 
 }
 
- @(Html.DevExtreme().DataGrid<LBW.Models.Entity.Proyecto>()
+@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Muestra>()
+    .ID("gridContainer")
     .DataSource(ds => ds.Mvc()
-        .Controller("Proyectoes")
+        .Controller("Muestras")
         .LoadAction("Get")
-        .Key("IdProyecto")
+        .Key("IdSample")
+
+    )
+    .ShowBorders(true)
+    .RemoteOperations(true)
+
+    .Selection(s => s.Mode(SelectionMode.Multiple))
+    .Columns(columns =>
+    {
+
+        columns.AddFor(m => m.IdSample).Caption("").Width(40)
+            .CellTemplate(@<text>
+    <svg id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.85 222.32" width="20" height="20">
+        <defs>
+            <style>
+                .cls-1, .cls-2 {
+                    fill: #fff;
+                    stroke: #a1acb9;
+                    stroke-width: 5px;
+                }
+
+                .cls-2 {
+                    fill-opacity: 0;
+                }</style>
+        </defs>
+        <g id="iKFDj0kg9Z7rAJNhnUljb"><path class="cls-1" d="M55.42,64.62s-47.28,104.7-50,110.2-5,18.8,0,30,20,15,20,15h120s15-3.8,20-15,2.72-24.5,0-30c-2.52-5.5-49.81-110.2-49.81-110.2" transform="translate(0.06 0)" /></g>
+        <g id="XN8UZQ70T0RvsJ5VMa4Kb"><path class="cls-2" d="M55.47,66.24V29.54" transform="translate(0.06 0)" /></g>
+        <g id="NRt2ceM2nUSDG_63RTn7p" data-name="NRt2ceM2nUSDG 63RTn7p"><path class="cls-2" d="M59.47,12.5h-14c-1.2,0-2-1-2-4" transform="translate(0.06 0)" /></g>
+        <g id="s8SYpRxWPAIU3cJdedely"><path class="cls-2" d="M127.47,6.5c0-1.3-.1-4-2-4h-80c-1.2,0-2,1-2,4" transform="translate(0.06 0)" /></g>
+        <g id="jr_bdNPwxVP1tR-x2jqCO" data-name="jr bdNPwxVP1tR-x2jqCO"><path class="cls-2" d="M111.47,12.5h14c1.2,0,2-1,2-4" transform="translate(0.06 0)" /></g>
+        <g id="R4Pa0_qX7JfWipx57qbDI" data-name="R4Pa0 qX7JfWipx57qbDI"><path class="cls-2" d="M43.47,6v3.2" transform="translate(0.06 0)" /></g>
+        <g id="dlFIQRIEBrFAhFefXz443"><path class="cls-2" d="M127.47,5.75v3.4" transform="translate(0.06 0)" /></g>
+        <g id="P_XejN-1qaYsxss16zLwI" data-name="P XejN-1qaYsxss16zLwI"><path class="cls-2" d="M115.47,66.13V30.43" transform="translate(0.06 0)" /></g>
+        <g id="lTDpCcKC40D5A8sL1xawP"><path class="cls-2" d="M57.47,12.5h56" transform="translate(0.06 0)" /></g>
+        <g id="T608tfJHVr4WVAKU9iJc1"><path class="cls-2" d="M59,28.93H45c-1.2,0-2-1-2-4" transform="translate(0.06 0)" /></g>
+        <g id="i2taEIgYasyF9QUqWHkoE"><path class="cls-2" d="M127,22.93c0-1.3-.1-4-2-4H45c-1.2,0-2,1-2,4" transform="translate(0.06 0)" /></g>
+        <g id="NmFf8K6tpBGHJF2c_Ciq_" data-name="NmFf8K6tpBGHJF2c Ciq "><path class="cls-2" d="M111,28.93h14c1.2,0,2-1,2-4" transform="translate(0.06 0)" /></g>
+        <g id="uddyYndm51nNd3PysMtf1"><path class="cls-2" d="M43,22.38v3.2" transform="translate(0.06 0)" /></g>
+        <g id="neZDGihypJmerEl_uYifO" data-name="neZDGihypJmerEl uYifO"><path class="cls-2" d="M48,12.36v5.3" transform="translate(0.06 0)" /></g>
+        <g id="s_8OH4jhcNKJd47vSWA8A" data-name="s 8OH4jhcNKJd47vSWA8A"><path class="cls-2" d="M121.47,13.53v5.3" transform="translate(0.06 0)" /></g>
+        <g id="DCAivGtc0hmVc-qZseLuG"><path class="cls-2" d="M127,22.19v3.4" transform="translate(0.06 0)" /></g>
+        <g id="QSyN0JoNGEdJp41vkXrTn"><path class="cls-2" d="M57,28.93h56" transform="translate(0.06 0)" /></g>
+    </svg>
+</text>
+);
+        columns.AddFor(m => m.TextID).Caption("Muestra");
+        columns.AddFor(m => m.LoginDate).Caption("Fecha")
+        .Format("yyyy-MM-dd")
+        .SortOrder(SortOrder.Desc);
+        columns.AddFor(m => m.IdProject).Caption("Proyecto").GroupIndex(0)
+        .SortOrder(SortOrder.Desc)
+        ;
+
+    })
+      .MasterDetail(detail =>
+      {
+          detail.Enabled(true);
+          detail.Template(@<text>
+    @(Html.DevExtreme().DataGrid<LBW.Models.Entity.Resultado>()
+    .DataSource(ds => ds.Mvc()
+    .Controller("Resultadoes")
+    .LoadAction("GetIdSample")
+    .LoadParams(new { id = new JS("data.IdSample") })
+    .Key("IdResult")
     )
     .RemoteOperations(true)
     .Columns(columns => {
 
-        columns.AddFor(m => m.IdProyecto);
+    columns.AddFor(m => m.IdAnalysis).GroupIndex(0);
+    columns.AddFor(m => m.NameComponent).Caption("Componente").AllowEditing(false);
+    columns.AddFor(m => m.ResultNumber).Caption("Valor");
+    columns.AddFor(m => m.IdUnidad).Lookup(lookup => lookup
+    .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("UnidadesStringLookup").Key("Value"))
+    .ValueExpr("Value")
+    .DisplayExpr("Text")
+    ).Caption("Unidad").AllowEditing(false);
 
-        columns.AddFor(m => m.ID_TL).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("PlantillasLookup").Key("Value"))
-            .ValueExpr("Value")
-            .DisplayExpr("Text")
-        );
-
-        columns.AddFor(m => m.ID_Cliente).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("ClientesLookup").Key("Value"))
-            .ValueExpr("Value")
-            .DisplayExpr("Text")
-        );
-
-        columns.AddFor(m => m.Name);
-
-        columns.AddFor(m => m.TemplateVersion);
-
-        columns.AddFor(m => m.Description);
-
-        columns.AddFor(m => m.Note);
-
-        columns.AddFor(m => m.Status).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("ListasLookup").Key("Value"))
-            .ValueExpr("Value")
-            .DisplayExpr("Text")
-        );
-
-        columns.AddFor(m => m.DateCreated);
-
-        columns.AddFor(m => m.DateRecieved);
-
-        columns.AddFor(m => m.DateStarted);
-
-        columns.AddFor(m => m.DateCompleted);
-
-        columns.AddFor(m => m.DateReviewed);
-
-        columns.AddFor(m => m.DateUpdated);
-
-        columns.AddFor(m => m.Owner).Lookup(lookup => lookup
-            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("UsuariosLookup").Key("Value"))
-            .ValueExpr("Value")
-            .DisplayExpr("Text")
-        );
-
-        columns.AddFor(m => m.NumSamples);
     })
+    .ShowBorders(true)
+    .AllowColumnReordering(true)
+    .RowAlternationEnabled(false)
+    .ShowColumnLines(true)
+    .Grouping(g => g.AutoExpandAll(true))
+    .ShowRowLines(true)
+    .Paging(paging => paging.PageSize(20))
+    .FilterRow(f => f.Visible(true))
+    .Pager(pager => {
+    pager.ShowPageSizeSelector(true);
+    pager.AllowedPageSizes(new[] { 20, 50, 100 });
+    pager.ShowInfo(true);
+    })
+    .SearchPanel(s => s
+    .Visible(true)
+    .HighlightCaseSensitive(true)
+    )
+    .Editing(editing => editing
+    .Mode(GridEditMode.Row)
+    .AllowUpdating(true)
+    )
+    )
+</text>);
+      })
 )
  
  
 
 <script>
 
-    $(function () {
-        var popupInstance = $("#popupContainer").dxPopup({
-            title: "Filtrar Proyectos",
-            maxWidth: 500,
-            visible: true,
-            onHidden: function (e) {
-                console.log("Pop-up cerrado");
-            }
-        }).dxPopup("instance");
-
-        $("#selectButton").dxButton({
-            stylingMode: "contained",
-            text: "Enviar",
-            type: "default",
-            width: 120,
-            onClick: function (e) {
-
-
-                // Obtener las fechas seleccionadas en formato dd/MM/yyyy
-                var startDateBox = $("#startDateBox").dxDateBox("instance");
-                var endDateBox = $("#endDateBox").dxDateBox("instance");
-
-                startDate = formatDate(startDateBox.option("value"), 'MM-dd-yyyy');
-                endDate = formatDate(endDateBox.option("value"), 'MM-dd-yyyy');
-
-                console.log(estado);
-
-
-                // Realizar la solicitud AJAX al controlador
-                $.ajax({
-                    url: '@Url.Action("GetByFilter", "Proyectoes")',
-                    method: "GET",
-                    async: false,
-                    data: {
-                        StartDate: startDate,
-                        EndDate: endDate
-                    },
-                    success: function (result) {
-                        console.log(result);
-                        // Manejar la respuesta del controlador, por ejemplo, actualizar el DataGrid
-                        var dataGrid = $("#gridContainer").dxDataGrid("instance");
-                        dataGrid.option("dataSource", result);
-                    },
-                    error: function (error) {
-                        console.error("Error al obtener los datos filtrados:", error);
-                    }
-                });
-
-                popupInstance.hide();
-            },
-            elementAttr: {
-                style: "text-align: center; line-height: normal;"
-            }
-        });
-
-        // Inicializar dateBoxes
-        $("#startDateBox").dxDateBox({
-            type: "date",
-            value: new Date(),
-            onValueChanged: function (e) {
-                startDate = e.value;
-            }
-        });
-
-        $("#endDateBox").dxDateBox({
-            type: "date",
-            value: new Date(),
-            onValueChanged: function (e) {
-                endDate = e.value;
-            }
-        });
-
-    });
+    
 
 </script>
