--- a/LBW/Views/GR/Autorizar.cshtml
+++ b/LBW/Views/GR/Autorizar.cshtml
@@ -55,42 +55,108 @@
 
 }
 
+
+
 @section PageActions {
 
 
 }
 
-
-@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Usuario>()
+@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Proyecto>()
     .DataSource(ds => ds.Mvc()
-        .Controller("Usuarios")
+        .Controller("Proyectoes")
         .LoadAction("Get")
-        .InsertAction("Post")
-        .UpdateAction("Put")
-        .Key("IdUser")
+        .Key("IdProyecto")
     )
     .RemoteOperations(true)
     .Columns(columns => {
 
-        columns.AddFor(m => m.IdUser);
-        columns.AddFor(m => m.UsuarioID);
+        columns.AddFor(m => m.Name);
 
-        columns.AddFor(m => m.NombreCompleto);
-
-        columns.AddFor(m => m.Correo);
-
-        columns.AddFor(m => m.Rol);
-
-        columns.AddFor(m => m.GMT_OFFSET);
-
-        columns.AddFor(m => m.UsuarioDeshabilitado);
-
-        columns.AddFor(m => m.FechaDeshabilitado);
-
- 
+        columns.AddFor(m => m.Status).Lookup(lookup => lookup
+            .DataSource(ds => ds.WebApi().Controller("Proyectoes").LoadAction("ListasLookup").Key("Value"))
+            .ValueExpr("Value")
+            .DisplayExpr("Text")
+        );
     })
-    .Editing(e => e
-        .AllowAdding(true)
-        .AllowUpdating(true)
+)
+
+@(Html.DevExtreme().DataGrid<LBW.Models.Entity.Muestra>()
+    .ID("gridContainer")
+    .DataSource(ds => ds.Mvc()
+        .Controller("Muestras")
+        .LoadAction("GetMuestrasRec")
+        .Key("IdSample")
+
     )
+    .ShowBorders(true)
+    .RemoteOperations(true)
+
+
+    .Columns(columns =>
+    {
+
+        columns.AddFor(m => m.TextID).Caption("Muestra");
+        columns.AddFor(m => m.LoginDate).Caption("Fecha")
+        .Format("yyyy-MM-dd")
+        .SortOrder(SortOrder.Desc);
+        columns.AddFor(m => m.IdProject)
+                       .Lookup(lookup => lookup
+                       .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("ProyectosLookup").Key("Value"))
+                       .ValueExpr("Value")
+                       .DisplayExpr("Text")).GroupIndex(0).Caption("Proyecto").SortOrder(SortOrder.Desc);
+
+    })
+      .FilterRow(f => f.Visible(true))
+      .MasterDetail(detail =>
+      {
+          detail.Enabled(true);
+          detail.Template(@<text>
+    @(Html.DevExtreme().DataGrid<LBW.Models.Entity.Resultado>()
+    .DataSource(ds => ds.Mvc()
+    .Controller("Resultadoes")
+    .LoadAction("GetIdSample")
+    .UpdateAction("Put")
+    .LoadParams(new { id = new JS("data.IdSample") })
+    .Key("IdResult")
+    )
+    .RemoteOperations(true)
+    .Columns(columns => {
+
+
+    columns.AddFor(m => m.IdAnalysis)
+    .Lookup(lookup => lookup
+    .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("AnalisissLookup").Key("Value"))
+    .ValueExpr("Value")
+    .DisplayExpr("Text")).GroupIndex(0).Caption("Análisis");
+
+    columns.AddFor(m => m.NameComponent).Caption("Componente").AllowEditing(false);
+    columns.AddFor(m => m.ResultNumber).Caption("Valor");
+    columns.AddFor(m => m.IdUnidad).Lookup(lookup => lookup
+    .DataSource(ds => ds.WebApi().Controller("Resultadoes").LoadAction("UnidadesStringLookup").Key("Value"))
+    .ValueExpr("Value")
+    .DisplayExpr("Text")
+    ).Caption("Unidad").AllowEditing(false);
+
+    })
+    .ShowBorders(true)
+    .AllowColumnReordering(true)
+    .RowAlternationEnabled(false)
+    .ShowColumnLines(true)
+    .Grouping(g => g.AutoExpandAll(true))
+    .ShowRowLines(true)
+    .Paging(paging => paging.PageSize(20))
+    .FilterRow(f => f.Visible(true))
+    .Pager(pager => {
+    pager.ShowPageSizeSelector(true);
+    pager.AllowedPageSizes(new[] { 20, 50, 100 });
+    pager.ShowInfo(true);
+    })
+    .SearchPanel(s => s
+    .Visible(true)
+    .HighlightCaseSensitive(true)
+    )
+    )
+</text>);
+      })
 )
